<resources>
    <string name="app_name">Project To-doList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario desconocido</string>
    <string name="nav_header_subtitle">Toque aquí para iniciar sesión</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_notifications">Notificaciones</string>
    <string name="action_select">Seleccionar</string>
    <string name="text_save">Guardar</string>
    <string name="hint_task_name">Nombre de la tarea</string>
    <string name="hint_task_desc">Descripción de la tarea</string>


    <string name="menu_general">Vista general</string>
    <string name="menu_today">Hoy</string>
    <string name="menu_thisweek">Esta semana</string>
    <string name="menu_tags">Etiquetas</string>
    <string name="menu_settings">Configuración</string>

    <string name="general_fragment_default">No se han añadido tareas aún</string>
    <string name="today_fragment_default">No hay tareas pendientes para hoy</string>
    <string name="thisweek_fragment_default">No hay tareas pendientes esta semana</string>
    <string name="tags_fragment_default">No se han creado etiquetas</string>
    <string name="settings_fragment_default">Configuración</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_notifications">Notificaciones</string>
    <string name="title_activity_addtask">Agregar tarea</string>

    <!-- Preference Titles -->
    <string name="messages_header">Mensajes</string>
    <string name="sync_header">Sincronización</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Tu firma</string>
    <string name="reply_title">Respuesta por defecto</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sincronizar email periódifcamente</string>
    <string name="attachment_title">Descargar adjuntos</string>
    <string name="attachment_summary_on">Descargar adjuntos automáticamente
    </string>
    <string name="attachment_summary_off">Descargar adjuntos manualmente</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido de nuevo "</string>
    <string name="invalid_username">No es un usuario válido</string>
    <string name="invalid_password">La contraseña debe tener mas de 5 carácteres</string>
    <string name="login_failed">"Inicio de sesión falló"</string>

</resources>
