<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_general"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_general" />
        <item
            android:id="@+id/nav_today"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_thisweek"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_thisweek" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@android:drawable/ic_input_delete"
            android:title="@string/menu_tags" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
    </group>
</menu>
