<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project2020.ui.home.HomeFragment"
        android:label="@string/menu_general"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.project2020.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_general"
        android:name="com.example.project2020.ui.gallery.GalleryFragment"
        android:label="@string/menu_general"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_today"
        android:name="com.example.project2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_today"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_thisweek"
        android:name="com.example.project2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_thisweek"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tags"
        android:name="com.example.project2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_tags"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.project2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
</navigation>