<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddTaskActivity">

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="293dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/hint_task_name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addTaskToolbar"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="141dp"
        android:layout_marginEnd="151dp"
        android:text="@string/text_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskDescription"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="371dp"
        android:layout_height="296dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="251dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_task_desc"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName"
        app:layout_constraintVertical_bias="0.04" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addTaskToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary_dark"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>